# xT-threat-model

./: .gitignore  README.md  pyproject.toml  requirements.txt
backend/: main.py  requirements.txt
docs/: methodology.md
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.jsx  main.jsx  styles.css
frontend/src/components/: PitchPanel.jsx  StatCards.jsx  ValidationChart.jsx
frontend/src/lib/: api.js
ml/: aggregate.py  config.py  data_ingestion.py  features.py  hybrid.py  markov_xt.py  model.py  pipeline.py
