[project]
name = "hybrid-xt-platform"
version = "0.1.0"
description = "Hybrid Expected Threat platform using StatsBomb data"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "statsbombpy>=1.14.0",
  "pandas>=2.2.0",
  "numpy>=1.26.0",
  "scikit-learn>=1.4.0",
  "xgboost>=2.0.0",
  "pyarrow>=15.0.0",
  "fastapi>=0.115.0",
  "uvicorn>=0.30.0",
  "pydantic>=2.8.0",
  "scipy>=1.13.0",
]

[project.optional-dependencies]
dev = [
  "ruff>=0.6.0",
  "pytest>=8.0.0",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
